--- a/BSIT_1D.html
+++ b/BSIT_1D.html
@@ -11,7 +11,7 @@
     <h6>Age: 18</h6>
     <h6>Address: Poblacion Cordova, Cebu</h6>
     <h6>Gender: Male</h6>
-    <h6>Description of yourself: I am a 1st year BSIT student at Cordova Public College. </h6>
+    <h6>Description of yourself:I am a BSIT student developing my skills in web development and programming. </h6>
 
 <h1>Paragraph</h1>
 <h6>Study Load: BSIT-1D</h6>
@@ -27,4 +27,5 @@
 
 </body>
 </html>
+
 
