--- a/BSIT_1D.html
+++ b/BSIT_1D.html
@@ -16,16 +16,17 @@
 <h1>Paragraph</h1>
 <h6>Study Load: BSIT-1D</h6>
 <h6>PATHFIT 2- Exercise-Based Fitness Activities- 1:00-3:00 PM- CABALLERO</h6>
-<h6>klzolyxl- Web Development- 8:00-9:00 AM- EMPACES</h6>
+<h6>WEB- Web Development- 8:00-9:00 AM- EMPACES</h6>
 <h6>DISCRETE 1- Discrete Structures- 10:00-11:00 AM- DINOY</h6>
-<h6>u6z34np4- Computer Programming 2- 9:00-10:00 AM- EDA</h6>
-<h6>shttfbz7- Basic Electronics- 12:00-1:00 PM- COMAYAS</h6>
+<h6>PROG 2- Computer Programming 2- 9:00-10:00 AM- EDA</h6>
+<h6>BASIC ELECT- Basic Electronics- 12:00-1:00 PM- COMAYAS</h6>
 <h6>GE 3- Reading in Philippine History- 9:00-4:00 PM- INOC</h6>
-<h6>uysds3nd- Panitikan ng Pilipinas- 10:00-1:00 PM- MANCHING</h6>
-<h6>ouerrb2j- Purposive Communication- 3:00-4:30 PM- BLASCO</h6>
+<h6>FIL 2- Panitikan ng Pilipinas- 10:00-1:00 PM- MANCHING</h6>
+<h6>GE 4- Purposive Communication- 3:00-4:30 PM- BLASCO</h6>
 <h6>NSTP 2- National Service Training Program 2- 4:30-6:00 PM- PAQUIBOT</h6>
 
 </body>
 </html>
+
 
 
